Fixed glow on mobile

--- a/new.css
+++ b/new.css
@@ -168,18 +168,18 @@ h2 {
 
 .icons-avail {
     filter: invert(1);
-    width: 40px;
-    height: 40px;
-    margin: 10px;
+    width: 60px;
+    height: 60px;
+    padding: 10px;
 }
 
 .icons-avail:hover {
-    filter: invert(1) drop-shadow(0 0 5px green) drop-shadow(0 0 10px green) drop-shadow(0 0 20px green);
+    filter: invert(1) drop-shadow(0 0 5px green) drop-shadow(0 0 5px green) drop-shadow(0 0 5px green);
 }
 
 .icons-avail:focus {
     filter: invert(22%) sepia(99%) saturate(4178%) hue-rotate(122deg) brightness(91%) contrast(102%) brightness(80%)
-    drop-shadow(0 0 5px white) drop-shadow(0 0 10px white) drop-shadow(0 0 20px white);
+    drop-shadow(0 0 5px white) drop-shadow(0 0 5px white) drop-shadow(0 0 5px white);
 }
 
 .form-section {
